--- a/kubernates/deployment.yaml
+++ b/kubernates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: makein-container
-        image: registory/myimage:latest
+        image: avlokesh8/makein:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 80
@@ -37,33 +37,33 @@ spec:
           limits:
             cpu: 200m
             memory: 256Mi
-        livenessProbe:
-          httpGet:
-            path: /health
-            port: 80
-          initialDelaySeconds: 15
-          periodSeconds: 10
-          failureThreshold: 1
-        readinessProbe:
-          httpGet:
-            path: /ready
-            port: 80
-          initialDelaySeconds: 15
-          periodSeconds: 10
-          successThreshold: 2
-      env:
-      - name: REACT_API_URL
-        valueFrom:
-          configMapKeyRef:
-            name: app-config
-            key: api_key
-      volumeMounts:
-      - name: makein-volumes
-        mountPath: /app/config
-        readOnly: true
-    volumes:
-    - name: makein-volumes
-      configMap:
-        name: app-config 
+        # livenessProbe:
+        #   httpGet:
+        #     path: /health
+        #     port: 80
+        #   initialDelaySeconds: 15
+        #   periodSeconds: 10
+        #   failureThreshold: 1
+        # readinessProbe:
+        #   httpGet:
+        #     path: /ready
+        #     port: 80
+        #   initialDelaySeconds: 15
+        #   periodSeconds: 10
+        #   successThreshold: 2
+    #   env:
+    #   - name: REACT_API_URL
+    #     valueFrom:
+    #       configMapKeyRef:
+    #         name: app-config
+    #         key: api_key
+    #   volumeMounts:
+    #   - name: makein-volumes
+    #     mountPath: /app/config
+    #     readOnly: true
+    # volumes:
+    # - name: makein-volumes
+    #   configMap:
+    #     name: app-config 
                  
           
