--- a/kubernates/deployment.yaml
+++ b/kubernates/deployment.yaml
@@ -32,11 +32,11 @@ spec:
         - containerPort: 80
         resources:
           request:
-            cpu: 100m
-            memory: 128Mi
+            cpu: "100m"
+            memory: "128Mi"
           limits:
-            cpu: 200m
-            memory: 256Mi
+            cpu: "200m"
+            memory: "256Mi"
         # livenessProbe:
         #   httpGet:
         #     path: /health
