--- a/kubernates/deployment.yaml
+++ b/kubernates/deployment.yaml
@@ -31,7 +31,7 @@ spec:
         ports:
         - containerPort: 80
         resources:
-          request:
+          requests:
             cpu: "100m"
             memory: "128Mi"
           limits:
