--- a/kubernates/ingress.yaml
+++ b/kubernates/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - host: makein.com
+  - host: devotree.in
     http:
       paths:
       - paths: ["/"]
